# radiobuddy

./: .gitignore
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b8a41a5284d_create_telemetry_events.py  79e8a31c75c1_widen_schema_version.py  7e7b828ecb60_add_site_room_exposure_presets.py
backend/resources/: chest_pa_rules.json  exposure_protocol.json
backend/scripts/: seed_demo.py
backend/src/radiobuddy_api/: main.py
backend/src/radiobuddy_api/features/ai_assist/: router.py  schemas.py  service.py
backend/src/radiobuddy_api/features/exposure_protocols/: router.py  service.py
backend/src/radiobuddy_api/features/procedure_rules/: router.py  service.py
backend/src/radiobuddy_api/features/site_presets/: models.py  router.py  schemas.py  service.py
backend/src/radiobuddy_api/features/telemetry/: models.py  router.py  schemas.py  service.py
backend/src/radiobuddy_api/platform/: config.py  error_handlers.py  json_schema.py  middleware.py  security.py
backend/src/radiobuddy_api/platform/db/: __init__.py  session.py
backend/tests/: test_ai_assist.py  test_exposure_protocols_db_override.py  test_exposure_protocols_unified.py  test_health.py  test_platform_envelope.py  test_readonly_endpoints.py  test_schema_validation.py  test_site_presets_db.py  test_site_presets_no_db.py
examples/: chest_pa_rules.example.json  telemetry_event.example.json
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart  (+1 more)
schemas/: exposure_protocol.schema.json  procedure_rules.schema.json  telemetry_event.schema.json
(+29 files in other folders)
